# CanteenScraper

./: main.py  pyproject.toml
dependencies/: scraper.py
models/: appmodels.py
routers/: menu.py
